0.12 (2008-10-30):
==================

* Fix mixins. The config interface has changed! You must now define a list
  ``mixins`` containing your classes (there can be more than one, and they
  can have any names you want). See the example config.

* When a layout error occurs, continue running (a la make -k). I might make
  this an option.

* Provide tracebacks for more errors.

* Properly decode (and flatten) multipart text messages.

* Write Unicode subject slugs to the filesystem as UTF-8.

0.11 (2008-10-27):
==================

* Greatly simplify attribute caching stuff. All attribute methods in your
  mixins should be renamed to get_ATTR, and just return a value (no more
  cache() method). This will break your code.

* Update our URL.

* Hack around lossage in the 2.5 mailbox module (which wraps the file object
  for no good reason).

0.10 (2008-10-12):
==================

* Switch to ISC license (33% less fat!)

* Changed default config dir to ~/.mnemosyne.

* Fixed cleaning of Unicode subjects.

0.9 (2006-02-28):
=================

* Fixed the "simple" example, which has a new name, some better default
  variables, and an updated mixin demo. Its ``config.py`` also lists the
  default values in a hopefully more readable way. (Thanks to Aigars
  Mahinovs for reporting this, and writing the Expat formatter.)

0.8 (2006-02-21):
=================

* Don't skip entries with empty subjects when deciding what pages to
  output.

* Use Kid's xhtml-strict serializer so that we get the correct XHTML
  doctype. Layouts should now simply print the template object rather
  than calling serialize directly.

* Split the module into a package. If you have an old version installed
  you'll want to remove it from site-packages.

0.7 (2006-02-10):
=================

* Removed EmPy entirely. While we could still plug something else in
  with not too much hassle, I don't think it's worth keeping if we have
  to work around broken Unicode support.
