@@ -2,10 +2,10 @@
 # address, and automatically update the blog on receipt of a valid signed
 # message. First, mime-gpg-decode verifies and discards the signature. If it
 # succeeds, the message is copied to the entry_dir and then delivered to
-# automnemosyne. If it fails, the message is sent to /dev/null.
+# autoennepe. If it fails, the message is sent to /dev/null.
 
 :0
-* ^TO_blog@example.invalid
+* ^TO_blog@polutropon.example
 {
     :0fW
     | mime-gpg-decode
@@ -13,10 +13,10 @@
     :0a
     {
         :0c
-        $HOME/.mnemosyne/entries/
+        $HOME/.ennepe/entries/
 
         :0
-        | automnemosyne >>$HOME/.mnemosyne/automnemosyne.log
+        | autoennepe >>$HOME/.ennepe/autoennepe.log
     }
 
     :0E
