@@ -2,7 +2,7 @@
 <?python
 import time
 import datetime
-from mnemosyne import __url__, __version__
+from ennepe import __url__, __version__
 
 def rfc3339(date):
     date = datetime.datetime.fromtimestamp(time.mktime(date))
@@ -16,7 +16,7 @@ def rfc3339(date):
   <link rel="alternate" type="application/xhtml+xml" href="${blogroot}/" />
   <updated>${rfc3339(muse.entries[-1].date)}</updated>
   <generator uri="${__url__}" version="${__version__}">
-    Mnemosyne
+    Ennepe
   </generator>
   <author>
     <name py:content="authname" />
