@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <?python
-from mnemosyne import __url__, __version__
+from ennepe import __url__, __version__
 ?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:py="http://purl.org/kid/ns#">
 
@@ -18,7 +18,7 @@ from mnemosyne import __url__, __version__
 
     <hr />
 
-    <p>Generated by <a href="${__url__}">Mnemosyne ${__version__}</a>.</p>
+    <p>Generated by <a href="${__url__}">Ennepe ${__version__}</a>.</p>
 
   </body>
 
