@@ -3,12 +3,12 @@
 from distutils.core import setup
 
 setup(
-    name='Mnemosyne',
+    name='Ennepe',
     version='0.12',
     description='Static blog generation system',
     author='Decklin Foster',
     author_email='decklin@red-bean.com',
-    url='http://www.red-bean.com/decklin/mnemosyne/',
+    url='http://www.red-bean.com/decklin/ennepe/',
     classifiers=[
         'Intended Audience :: Advanced End Users',
         'Development Status :: 4 - Beta',
@@ -19,9 +19,9 @@ setup(
         'Programming Language :: Python',
         ],
     package_dir = {'': 'lib'},
-    packages = ['mnemosyne'],
-    scripts = ['mnemosyne'],
+    packages = ['ennepe'],
+    scripts = ['ennepe'],
     data_files=[
-        # ('share/man1', ['mnemosyne.1', 'etc...']),
+        # ('share/man1', ['ennepe.1', 'etc...']),
         ],
     )
