@@ -1,3 +1,5 @@
+* Renamed everything from Mnemosyne to Ennepe.
+
 0.12 (2008-10-30):
 ==================
 
